--- a/src/Styles/views/_index.scss
+++ b/src/Styles/views/_index.scss
@@ -1,4 +1,10 @@
 body{
     // background-color: #E0C3FC;
-    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    // background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    background-image: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+    
+}
+.toast-container{
+    inset-inline-end: 1px;
+    inset-block-end: 3rem;
 }
